...
            Row(verticalAlignment = Alignment.CenterVertically) {
                OutlinedTextField(
                    value = newTask,
                    onValueChange = {
                        viewModel.onTaskTextChange(it)
                    },
                    label = { Text("Nova tarefa") },
                    isError = hasError,
                    supportingText = {
                        if (hasError) {
                            Text("Campo vazio ou com símbolos [@#!\$%¨&*]")
                        }
                    },
                    modifier = Modifier.weight(1f)
                )
                Spacer(modifier = Modifier.width(8.dp))
                Button(onClick = { viewModel.addTask() }) {
                    Text("Adicionar")
                }
            }

            Spacer(modifier = Modifier.height(16.dp))

            LazyColumn {
...
